# rv-playground

./: .gitignore  README.md  pyproject.toml  rv.py
fw/: .gitignore  Cargo.toml  build.rs  memory.x
fw/.cargo/: config.toml
fw/src/: main.rs
rv/: __init__.py  __main__.py  platform.py  top.py
