[tool.poetry]
name = "rv"
version = "0.1.0"
description = ""
authors = ["Adam Greig <adam@adamgreig.com>"]

[tool.poetry.dependencies]
python = "^3.8"
amaranth = "0.3"
minerva = { git = "https://github.com/minerva-cpu/minerva" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
